<resources>
    <string name="app_name">EaseMusic</string>

    <string name="there_has_nothing">这里什么都没有哦~</string>
    <string name="is_loading">正在努力加载中…</string>
    <string name="have_problem">哇哦，好像出现了什么问题</string>
    <string name="prompt">提示</string>
    <string name="login_username">用户姓名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>

    <string-array name="main_mi_title">
        <item>我的</item>
        <item>发现</item>
    </string-array>

    <string name="nick_name">用户名/昵称</string>
    <string name="user_lv">等级</string>
    <string name="not_login">未登录</string>
    <string name="sign">已签到</string>
    <string name="not_sign">签到</string>

    <string name="local_music">本地音乐</string>
    <string name="recently_play">最近播放</string>
    <string name="download_manager">下载管理</string>
    <string name="my_radio">我的电台</string>
    <string name="my_collection">我的收藏</string>

    <string-array name="playlist_title">
        <item>创建的歌单</item>
        <item>收藏的歌单</item>
    </string-array>

    <string name="created_playlist">创建的歌单</string>
    <string name="collection_playlist">收藏的歌单</string>

    <string name="by">by</string>
    <string name="num">首</string>

    <string-array name="local_music_mi_title">
        <item>单曲</item>
        <item>歌手</item>
        <item>专辑</item>
        <item>文件夹</item>
    </string-array>

    <string name="scan_local_music">扫描本地音乐</string>

    <string name="read_or_write_external_storage">请授予读写权限，否则无法扫描音乐</string>
</resources>
