<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_local_music"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_local_music"
                android:textSize="16sp"
                android:text="@string/local_music" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recently_play"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_recently_play"
                android:textSize="16sp"
                android:text="@string/recently_play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_download_manager"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_download_manager"
                android:textSize="16sp"
                android:text="@string/download_manager" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_my_radio"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_my_radio"
                android:textSize="16sp"
                android:text="@string/my_radio" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_my_collection"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_fast_forward"
                android:contentDescription="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/iv_my_collection"
                android:textSize="16sp"
                android:text="@string/my_collection" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/divider"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>